Fix styles of loader on Safari

--- a/src/components/Work/Work/Work.module.scss
+++ b/src/components/Work/Work/Work.module.scss
@@ -8,7 +8,7 @@
   // background-color: $content-bg-white-hover;
   border-radius: $br-md;
   cursor: pointer;
-  transition: background-color 0.3s ease-out, color 0.7s ease-out;
+  transition: all 0.3s ease-out, color 0.7s ease-out;
   @include media-query('tb') {
     color: $text-black;
   }
@@ -20,9 +20,11 @@
     margin-bottom: 32px;
     border-radius: $br-sm;
     overflow: hidden;
+    transform: translateZ(0); // for safari
     img {
-      transition: 0.3s ease-out;
+      transition: all 0.3s ease-out;
       filter: saturate(0.9) opacity(0.95);
+      transform: translateZ(0); // for safari
       @include media-query('tb') {
         filter: saturate(1) opacity(1);
       }
@@ -39,6 +41,7 @@
       z-index: 2;
       top: 16px;
       right: 16px;
+      transform: translateZ(0); // for safari
       @include media-query('pc') {
         top: 8px;
         right: 8px;
