--- a/src/components/Workflow/WorkflowTab/WorkflowItem/WorkflowItem.module.scss
+++ b/src/components/Workflow/WorkflowTab/WorkflowItem/WorkflowItem.module.scss
@@ -79,6 +79,7 @@
           background-color: $disabled-gray;
           img {
             border-radius: $br-sm;
+            transform: translateZ(0); // for safari
           }
         }
       }
